--- a/css/styles.css
+++ b/css/styles.css
@@ -783,10 +783,11 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-    background: rgba(0, 41, 56, 0.5);
+    background: #002938;
     border-radius: 5px;
     margin: 5px;
-    border: 1px solid rgba(0, 41, 56, 0.3);
+    border: 1px solid #007b8d;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 ::-webkit-scrollbar-thumb {
@@ -808,10 +809,10 @@ body {
 /* Firefox scrollbar */
 html {
     scrollbar-width: thin;
-    scrollbar-color: #007b8d rgba(0, 41, 56, 0.1);
+    scrollbar-color: #007b8d #002938;
 }
 
 body {
     scrollbar-width: thin;
-    scrollbar-color: #007b8d rgba(0, 41, 56, 0.1);
+    scrollbar-color: #007b8d #002938;
 }
